--- a/2020_21/PRB/H3/hand-in/homework.tex
+++ b/2020_21/PRB/H3/hand-in/homework.tex
@@ -1,54 +1,16 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage[british]{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{mathtools}
-\usepackage{nicefrac}
-\usepackage{amsthm}
-\usepackage{changepage}
-\geometry{tmargin=2cm, bmargin=3cm}
-\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
-\newcommand*\lneg[1]{\overline{#1}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\st}{\text{ s.t. }}
-\renewcommand{\P}{\mathbb{P}}
-%newenvironment{claim}[1]{\noindent\emph{Claim.}\space#1}{}
-\newenvironment{claimproof}[1]{\par\noindent\emph{Proof.}\space#1}{\hfill $\blacksquare$}
-\theoremstyle{plain}
-\newtheorem{claim}[section]{Claim}
-\newtheorem*{claim*}{Claim}
-\newtheorem{lemma}{Lemma}[section]
-\DeclareMathOperator{\lub}{\text{LUB}}
-\DeclareMathOperator{\hcf}{hcf}
-\DeclareMathOperator{\lcm}{lcm}
-\setcounter{MaxMatrixCols}{20}
-\newcommand{\E}{\mathbb{E}}
-\newcommand{\V}{\mathbb{V}}
-\DeclareMathOperator{\Geom}{Geom}
-\DeclareMathOperator{\Binom}{Binom}
-\DeclareMathOperator{\Bern}{Bern}
-\DeclareMathOperator{\Unif}{Unif}
-\DeclareMathOperator{\Exp}{Exp}
-\DeclareMathOperator{\GD}{Gamma}
-\newcommand*\binco[2]{\begin{pmatrix}
-  #1\\#2
-\end{pmatrix}}
-\newcommand{\ih}{\widehat i}
-\newcommand{\jh}{\widehat j}
-\newcommand{\kh}{\widehat k}
-\newcommand{\K}{\mathcal{K}}
-\newcommand{\dv}[1]{\vec #1\, '}
-\renewcommand{\d}[1]{#1'}
+\usepackage{homework-preamble}
+
 \begin{document}
 \title{Probability: Week 8 Hand-in}
 \author{Franz Miltz (UNN: S1971811)}
 \date{10 November, 2020}
 \maketitle
+
+
 \section*{P6.2}
+
+
 Let $B$ be the even that the coin is biased. Then $\P(B)=1/1000$. Further,
 let $A_n$ be the event that a coin comes down heads $n$ times in a row.
 Then we want to find some $N\in\R$ such that
@@ -84,7 +46,11 @@ We can verify this:
 \begin{align*}
   \P(B|A_{17}) \approx 0.992.
 \end{align*}
+
+
 \section*{P7.2}
+
+
 Observe that the the $i$th step $S_i=x_i-x_{i-1}$ for $i\in\N$ is either $-1$ or
 $1$ with equal probability. Therefore we can define $S_i$ in terms of the
 random variable $W_i\sim\Bern(1/2)$ as follows:
@@ -136,7 +102,11 @@ we can write
   \P(X_{2n}=0) \approx \frac{1}{\sqrt{\pi n}}
 \end{align*}
 as well.
+
+
 \section*{P7.4}
+
+
 \begin{claim*}
   Consider a random walk on the integers in $[0,n]$ where on each move, one moves right with
   probability $p\not=1/2$ and left with probability $q=1-p$. The endpoints $0$ and $n$ are absorbing.
