--- a/2020_21/PRB/H3/week7/homework.tex
+++ b/2020_21/PRB/H3/week7/homework.tex
@@ -1,54 +1,16 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage[british]{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{mathtools}
-\usepackage{nicefrac}
-\usepackage{amsthm}
-\usepackage{changepage}
-\geometry{tmargin=2cm, bmargin=3cm}
-\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
-\newcommand*\lneg[1]{\overline{#1}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\st}{\text{ s.t. }}
-\renewcommand{\P}{\mathbb{P}}
-%newenvironment{claim}[1]{\noindent\emph{Claim.}\space#1}{}
-\newenvironment{claimproof}[1]{\par\noindent\emph{Proof.}\space#1}{\hfill $\blacksquare$}
-\theoremstyle{plain}
-\newtheorem{claim}[section]{Claim}
-\newtheorem*{claim*}{Claim}
-\newtheorem{lemma}{Lemma}[section]
-\DeclareMathOperator{\lub}{\text{LUB}}
-\DeclareMathOperator{\hcf}{hcf}
-\DeclareMathOperator{\lcm}{lcm}
-\setcounter{MaxMatrixCols}{20}
-\newcommand{\E}{\mathbb{E}}
-\newcommand{\V}{\mathbb{V}}
-\DeclareMathOperator{\Geom}{Geom}
-\DeclareMathOperator{\Binom}{Binom}
-\DeclareMathOperator{\Bern}{Bern}
-\DeclareMathOperator{\Unif}{Unif}
-\DeclareMathOperator{\Exp}{Exp}
-\DeclareMathOperator{\GD}{Gamma}
-\newcommand*\binco[2]{\begin{pmatrix}
-  #1\\#2
-\end{pmatrix}}
-\newcommand{\ih}{\widehat i}
-\newcommand{\jh}{\widehat j}
-\newcommand{\kh}{\widehat k}
-\newcommand{\K}{\mathcal{K}}
-\newcommand{\dv}[1]{\vec #1\, '}
-\renewcommand{\d}[1]{#1'}
+\usepackage{homework-preamble}
+
 \begin{document}
 \title{Probability: Week 7 Solutions}
 \author{Franz Miltz (UNN: S1971811)}
 \date{10 November, 2020}
 \maketitle
+
+
 \section*{P7.1}
+
+
 Let $X_1,X_2,...$ be as described in the questions. We find 
 \begin{align*}
   \E(X) &= \P(X_1^c)(\E(X)+1)\\
@@ -77,7 +39,11 @@ three consecutive successes is
 \begin{align*}
   \E(X) = \frac{1+p+p^2}{p^3}.
 \end{align*}
+
+
 \section*{P7.2}
+
+
 Observe that the the $i$th step $S_i=x_i-x_{i-1}$ for $i\in\N$ is either $-1$ or
 $1$ with equal probability. Therefore we can define $S_i$ in terms of the
 random variable $W_i\sim\Bern(1/2)$ as follows:
@@ -129,7 +95,11 @@ we can write
   \P(X_{2n}=0) \approx \frac{1}{\sqrt{\pi n}}
 \end{align*}
 as well.
+
+
 \section*{P7.3}
+
+
 Let $X_k$ be the number of steps before a random walk starting at a node
 $k$ steps away from the desired target terminates. Then we find the following
 expected values for $k\in[1,3]$ with $E(X_k) = s_k$ and $s_0=0$:
@@ -148,7 +118,11 @@ By inserting (\ref{s3}) into (\ref{s2}) we find
 Using this in (\ref{s1}) gives $s_1=5$ and thus $s_2=8$ and $s_3=9$.
 By using the fact that $\sigma_{X_n}\to\infty$ as $n\to\infty$, we find that
 $\P(X_n)\to 0$ at the same time.
+
+
 \section*{P7.4}
+
+
 \begin{claim*}
   Consider a random walk on the integers in $[0,n]$ where on each move, one moves right with
   probability $p\not=1/2$ and left with probability $q=1-p$. The endpoints $0$ and $n$ are absorbing.
